fixed background position issue
I messed up my git branching whoops. gotta be careful

--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -131,11 +131,7 @@ $parallax-h: 800px;
 	
 	.parallax {
 	background: url('http://cdn.austinpray.com/static/img/header_bg.jpg') 50% 0 no-repeat fixed;
-<<<<<<< HEAD
 	background-position: 50% -300px;
-=======
-	background-position:50% -300px;
->>>>>>> develop
 	
 
 	}
@@ -537,7 +533,6 @@ footer#foot {
 	}
 /* #Font-Face
 ================================================== */
-
 @font-face {
     font-family: 'modern_pictograms_proregular';
     src: url('modernpictogramspro_2-webfont.eot');
@@ -548,19 +543,4 @@ footer#foot {
     font-style: normal;
     
 }
-
-
-
-/*cdn
-@font-face {
-    font-family: 'modern_pictograms_proregular';
-    src: url('../css/modernpictogramspro_2-webfont.eot');
-    src: url('../css/modernpictogramspro_2-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../css/modernpictogramspro_2-webfont.woff') format('woff'),
-         url('../css/modernpictogramspro_2-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    
-}
-*/
 
